# Tencent-gravity-project

./: README.md
Android/Android_player/: Readme.md
Android/Android_player/FFmpegDecoder/app/: build.gradle
Android/Android_player/FFmpegDecoder/app/src/main/: AndroidManifest.xml
Android/Android_player/FFmpegDecoder/app/src/main/jni/: Android.mk  Application.mk  com_hejunlin_ffmpegdecoder_NativePlayer.h  log.h  yuiopffmpeg.c
Android/screenRecorder_Android/: README.md  settings.gradle
Android/screenRecorder_Android/app/: build.gradle
Android/screenRecorder_Android/app/src/main/: AndroidManifest.xml
Android/screenRecorder_Android/app/src/main/cpp/: CMakeLists.txt  librtmp-jni.c  librtmp-jni.h
Android/screenRecorder_Android/app/src/main/res/drawable/: ic_record.xml
Android/screenRecorder_Android/app/src/main/res/layout/: activity_main.xml
Android/screenRecorder_Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/screenRecorder_Android/gradle/wrapper/: gradle-wrapper.properties
Android/安装包apk/: AndroidRecordScreen.apk
Linux/controlSys/: README.md  client1.cpp  server1.cpp
Linux/linux_player/: Makefile  Readme.md  player  player.c
Linux/screenRecorder_linux/: CMakeLists.txt  REAMDE.md  captureScreen.c  captureScreen.h  main.c
Windows/Windows代码文件/player_win/: CMakeLists.txt  Readme.md  player.c
Windows/Windows代码文件/screenRecorder_win/: CMakeLists.txt  README.md  captureScreen.c  captureScreen.h  main.c
演示游戏/: README.md
演示游戏/code/: bomb.py  goods.py  main.py  santa.py  snow.py
(+23 files in other folders)
